--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -530,8 +530,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"cnn_model.pth\"\n",
-    "torch.save(model.state_dict(),model_path)"
+    "#model_path = \"cnn_model.pth\"\n",
+    "#torch.save(model.state_dict(),model_path)\n",
+    "print(\"Hi\")"
    ]
   }
  ],
