--- a/pretrainedmodels.ipynb
+++ b/pretrainedmodels.ipynb
@@ -22,7 +22,10 @@
     "from torchvision import models\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
-    "from torchsummary import summary"
+    "from torchsummary import summary\n",
+    "from torchvision.io import read_image \n",
+    "from pathlib import Path\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -31,15 +34,248 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r50 = models.resnet50(pretrained=True)\n",
-    "mv3 = models.mobilenet_v3_large(pretrained=True)\n",
-    "v16 = models.vgg16(pretrained=True)"
+    "train_path = \"FER-13/train\"\n",
+    "test_path = \"FER-13/test\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.Grayscale(),\n",
+    "    transforms.Resize((64, 64)),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    #transforms.RandomRotation(10),\n",
+    "    transforms.ToTensor(),\n",
+    "    #transforms.ToDtype(torch.float32, scale=True),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "train_dataset = torchvision.datasets.ImageFolder(root=train_path, transform=transform)\n",
+    "test_dataset = torchvision.datasets.ImageFolder(root=test_path, transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_size = int(0.9 * len(train_dataset))\n",
+    "val_size = len(train_dataset) - train_size\n",
+    "train_dataset, val_dataset = torch.utils.data.random_split(train_dataset, [train_size, val_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 256\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = os.listdir(train_path)\n",
+    "fig, axs = plt.subplots(1, 7, figsize=(15, 5))\n",
+    "for i, class_name in enumerate(classes):\n",
+    "    img_path = os.path.join(train_path, class_name, os.listdir(os.path.join(train_path, class_name))[0])\n",
+    "    img = Image.open(img_path)\n",
+    "    axs[i].imshow(img, cmap='gray')\n",
+    "    axs[i].set_title(class_name)\n",
+    "    axs[i].axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r50_weights = models.ResNet50_Weights.DEFAULT\n",
+    "r50 = models.resnet50(weights=r50_weights)\n",
+    "#r50.eval()\n",
+    "\n",
+    "# Define ResNet50 with modified first layer for grayscale\n",
+    "class gsr50(nn.Module):\n",
+    "    def __init__(self, num_classes=7):\n",
+    "        super(gsr50, self).__init__()\n",
+    "\n",
+    "        # Replacing first conv layer for grayscale image\n",
+    "        self.conv1 = nn.Conv2d(1, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+    "        self.bn1 = nn.BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        # Keeping rest of the ResNet50 architecture same\n",
+    "        self.layer1 = nn.Sequential(*list(r50.layer1))\n",
+    "        self.layer2 = nn.Sequential(*list(r50.layer2))\n",
+    "        self.layer3 = nn.Sequential(*list(r50.layer3))\n",
+    "        self.layer4 = nn.Sequential(*list(r50.layer4))\n",
+    "\n",
+    "        # Modifying last fc layer for 7-class classification\n",
+    "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
+    "        self.fc = nn.Linear(2048, num_classes)  # Adjust input size based on your architecture\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.bn1(x)\n",
+    "        x = self.relu(x)\n",
+    "\n",
+    "        x = self.layer1(x)\n",
+    "        x = self.layer2(x)\n",
+    "        x = self.layer3(x)\n",
+    "        x = self.layer4(x)\n",
+    "\n",
+    "        x = self.avgpool(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.fc(x)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "r50_new = gsr50(num_classes=7)\n",
+    "#r50_new.eval()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mv3 = models.mobilenet_v3_large(pretrained=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#v16 = models.vgg16(pretrained=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(r50_new.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(model, train_loader, val_loader, criterion, optimizer, num_epochs):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
+    "\n",
+    "    train_losses = []\n",
+    "    train_accuracies = []\n",
+    "    val_losses = []\n",
+    "    val_accuracies = []\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train()\n",
+    "        train_loss = 0.0\n",
+    "        correct_train = 0\n",
+    "        total_train = 0\n",
+    "        for inputs, labels in train_loader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            train_loss += loss.item() * inputs.size(0)\n",
+    "            _, predicted = torch.max(outputs.data,1)\n",
+    "            total_train += labels.size(0)\n",
+    "            correct_train += (predicted == labels).sum().item()\n",
+    "        model.eval()\n",
+    "        val_loss = 0.0\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        with torch.no_grad():\n",
+    "            for inputs, labels in val_loader:\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)\n",
+    "                outputs = model(inputs)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                val_loss += loss.item() * inputs.size(0)\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "                correct += (predicted == labels).sum().item()\n",
+    "        train_loss = train_loss / len(train_loader.dataset)\n",
+    "        train_acc = correct_train / total_train\n",
+    "        val_loss = val_loss / len(val_loader.dataset)\n",
+    "        val_acc = correct / total\n",
+    "        train_losses.append(train_loss)\n",
+    "        val_losses.append(val_loss)\n",
+    "        train_accuracies.append(train_acc)\n",
+    "        val_accuracies.append(val_acc)\n",
+    "\n",
+    "        print(f\"Epoch {epoch+1}/{num_epochs}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Train Acc: {train_acc:.4f}, Val Acc: {val_acc:.4f}\")\n",
+    "    return train_losses,val_losses,train_accuracies,val_accuracies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_epochs = 20\n",
+    "train_losses,val_losses,train_accuracies,val_accuracies = train_model(r50_new, train_loader, val_loader, criterion,optimizer, num_epochs=n_epochs)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
